kustomize/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-web
  labels:
    app: test-web
spec:
  replicas: 1  ## k
  selector:
    matchLabels:
      app: test-web
  template:
    metadata:
      labels:
        app: test-web
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources: {}
