kustomize/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-web
spec:
  selector:
    app: test-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
